--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -91,19 +91,19 @@ layout: default
                 </ul>
 
 
-                {% if site.disqus_username %}
-                <!-- disqus 评论框 start -->
+                <!--{% if site.disqus_username %}
+                 disqus 评论框 start 
                 <div class="comment">
                     <div id="disqus_thread" class="disqus-thread"></div>
                 </div>
-                <!-- disqus 评论框 end -->
+                 disqus 评论框 end 
                 {% endif %}
 
                 {% if site.netease_comment %}
-                <!-- 网易云跟帖 评论框 start -->
+                 网易云跟帖 评论框 start 
                 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
-                <!-- 网易云跟帖 评论框 end -->
-                {% endif %}
+                 网易云跟帖 评论框 end 
+                {% endif %}-->
             </div>  
 
     <!-- Side Catalog Container -->
@@ -179,8 +179,8 @@ layout: default
 {% endif %}
 
 
-{% if site.disqus_username %}
-<!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
+<!--{% if site.disqus_username %}
+ disqus 公共JS代码 start (一个网页只需插入一次) 
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = "{{site.disqus_username}}";
@@ -193,8 +193,8 @@ layout: default
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
-<!-- disqus 公共JS代码 end -->
-{% endif %}
+ disqus 公共JS代码 end 
+{% endif %}-->
 
 
 {% if site.anchorjs %}
